# minim-lnk-parser

./: .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt  main.cpp
